2008-05-19  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/types_.py (Password): New parameter `strength'.

2008-05-16  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py
	(PostgreSQLStandardBindingHandler._pdbb_get_table_type.lookup_column):
	Use of undefined variable removed.

2008-05-16  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/types_.py (DateTime.current_gmtime): New method.

2008-05-14  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py (PostgreSQLStandardBindingHandler): Use
	_pdbb_table_column_data class wide.

2008-05-14  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py (DBDataPostgreSQL.fetchone.skip): Don't
	run fetch SQL command when asking for 0 rows.

2008-05-14  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py: Instead of asking database about each
	database column separately, ask about all columns at once, thus
	reducing number of initial SQL queries.

2008-05-14  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/dbapi.py (_DBAPIAccessor._postgresql_query.do_query):
	Locking exception detection updated for new psycopg version.

2008-05-13  Milan Zamazal  <pdm@brailcom.org>

	* pytis/util/util.py (direct_public_members): Once again reworked.
	The undocumented change from 2005-05-24 was probably broken and
	makes no sense to me.  At least tests work now.  If there is still
	anything wrong with the function, please write appropriate tests
	and make them work.

2008-05-13  Milan Zamazal  <pdm@brailcom.org>

	* pytis/util/util.py (direct_public_members): Test more correctly
	for the presence of the __class__ attribute.

2008-05-13  Milan Zamazal  <pdm@brailcom.org>

	* pytis/util/_test.py (XStack): 
	* pytis/util/util.py (XStack): 

	XStack tests and docstrings adjusted according to actual XStack behavior

	This changes semantics of the class.  But because the current XStack behavior
	is implemented this way for about three years now, I assume the class semantics