@@ -222,10 +222,10 @@ class Password(_TypeCheck):
         self._test_validity(t3, 'abc', None, kwargs={'verify': 'abc'})
         self._test_validity(t3, 'abcdef', hash, kwargs={'verify': 'abcdef'}, check_export=False)
         t4 = pytis.data.Password(md5=True, minlen=4, not_null=True)
-        self._test_validity(t2, '', None)
-        self._test_validity(t2, None, None)
-        self._test_validity(t2, '', None, kwargs={'verify': ''})
-        self._test_validity(t2, 'x', 'x', kwargs={'verify': 'x'})
+        self._test_validity(t4, 'xxx', None)
+        self._test_validity(t4, '', None, kwargs={'verify': ''})
+        hash = md5.new('abcd').hexdigest()
+        self._test_validity(t4, 'abcd', hash, kwargs={'verify': 'abcd'}, check_export=False)
         t5 = pytis.data.Password(strength=None)
         self._test_validity(t5, 'x', 'x')
         t6 = pytis.data.Password(strength=True)
